Files head, header and footer added.

--- a/WebSite/views/index.ejs
+++ b/WebSite/views/index.ejs
@@ -2,8 +2,15 @@
 <html>
 	<head>
 		<title>Home</title>
+		<% include ./head %>
 	</head>
 	<body>
+		<header>
+		<% include ./header %>
+		</header>
+		<main>
 		<h1>Welcome!</h1>
+		</main>
+		<% include ./footer %>
 	</body>
 </html>
