--- a/WebSite/views/footer.ejs
+++ b/WebSite/views/footer.ejs
@@ -6,7 +6,7 @@
 				<p class="grey-text text-lighten-4">Simplemente calidad.</p>
 			</div>
 			<div class="col l4 offset-l2 s12">
-				<h5 class="white-text">Links</h5>
+				<h5 class="white-text">Enlaces</h5>
 				<ul>
 					<li><a class="grey-text text-lighten-3" href="/">Inicio</a></li>
 					<li><a class="grey-text text-lighten-3" href="/users">Usuarios</a></li>
