--- a/WebSite/views/index.ejs
+++ b/WebSite/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Home</title>
+		<title>Inicio</title>
 		<% include ./head %>
 	</head>
 	<body>
@@ -9,7 +9,7 @@
 		<% include ./header %>
 		</header>
 		<main>
-		<h1>Welcome!</h1>
+			<h1>¡Bienvenido!</h1>
 		</main>
 		<% include ./footer %>
 	</body>
